Улучшение обработки аргументов и логики пинга
Внесены изменения в `Program.cs` для улучшения обработки аргументов командной строки и логики пинга. Добавлены новые параметры (`-p`, `-t`, `-l`, `-ttl`, `-c`, `--avgt`, `--avgl`, `-e`) для гибкой настройки. Изменены значения переменных `pause` и `avg_w_t`, добавлена обработка исключений и улучшен вывод информации о пинге. Удалены устаревшие части кода.

Обновлены аргументы командной строки в `LaunchSettings.json` для профиля `Pinger`, чтобы соответствовать новым параметрам.

В `FolderProfile.pubxml` изменена структура XML, удалены свойства `PublishTrimmed`, `SelfContained` и `PublishSingleFile`, что указывает на изменение подхода к публикации.

Изменена команда в `Publish.bat`, убран параметр `--no-restore` для упрощения процесса сборки и публикации.

--- a/Pinger/Properties/LaunchSettings.json
+++ b/Pinger/Properties/LaunchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Pinger": {
       "commandName": "Project",
-      "commandLineArgs": "ya.ru"
+      "commandLineArgs": "-p 500 -t 2000 -l 64 -ttl 100 -c 100 --avgt 20 --avgl 500 -e ya.ru"
     }
   }
 }
