--- a/Pinger/Pinger.csproj
+++ b/Pinger/Pinger.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>1.$([System.DateTime]::UtcNow.AddHours(3).ToString("yy.Mdd.Hmm"))</Version>
 
     <IsAotCompatible>true</IsAotCompatible>
 
