Add GitHub Actions workflow for release creation
* Trigger workflow on pull request merge events to the `master` branch and manual trigger
* Add steps to build the project using `dotnet publish` command
* Add steps to create a new release and upload the `Pinger.exe` artifact
* Add steps to determine the release version by running `Pinger.exe -v` and extracting the version number from the output
* Set the `ref` to `master` in the checkout step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Create Release
 
 on:
-  push:
+  pull_request:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        ref: master
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
