Add logic to set release mode to draft if branch is not `master`
* Modify the `draft` parameter in the `create_release` step to use a conditional expression based on the branch name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         tag_name: v${{ steps.get_version.outputs.VERSION }}
         release_name: Release ${{ steps.get_version.outputs.VERSION }}
-        draft: false
+        draft: ${{ github.event.inputs.branch != 'master' }}
         prerelease: false
 
     - name: Upload Release Asset
