--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Create Release
 
 on:
   pull_request:
+    types: [closed]
     branches:
       - master
   workflow_dispatch:
@@ -13,6 +14,7 @@ on:
 
 jobs:
   build:
+    if: github.event_name == 'workflow_dispatch' || github.event.pull_request.merged == true
     runs-on: windows-latest
 
     steps:
