Упрощение команды публикации в release.yml
В файле `release.yml` изменена команда для публикации проекта. Удалена лишняя часть `-v d`, что делает команду более чистой и понятной. Теперь команда выглядит как `dotnet publish Pinger /p:PublishProfile=./Pinger/Properties/PublishProfiles/FolderProfile.pubxml`.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
       run: dotnet build -c Release
 
     - name: Publish
-      run: dotnet publish Pinger -v d /p:PublishProfile=./Pinger/Properties/PublishProfiles/FolderProfile.pubxml
+      run: dotnet publish Pinger /p:PublishProfile=./Pinger/Properties/PublishProfiles/FolderProfile.pubxml
 
     - name: Get version
       id: get_version
