Тзменение кодировки файла release.yml на utf8

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,15 +41,15 @@ jobs:
       id: get_version
       shell: bash
       run: |
-        # Извлечение текущей версии приложения
+        # РР·РІР»РµС‡РµРЅРёРµ С‚РµРєСѓС‰РµР№ РІРµСЂСЃРёРё РїСЂРёР»РѕР¶РµРЅРёСЏ
         full_version=$(./Pinger/bin/Release/net9.0/publish/win-x64/Pinger.exe -v)
-        # Печать полной версии для контроля и отладки
+        # РџРµС‡Р°С‚СЊ РїРѕР»РЅРѕР№ РІРµСЂСЃРёРё РґР»СЏ РєРѕРЅС‚СЂРѕР»СЏ Рё РѕС‚Р»Р°РґРєРё
         echo "Full version: $full_version"
-        # Выделение части версии с помощью grep
+        # Р’С‹РґРµР»РµРЅРёРµ С‡Р°СЃС‚Рё РІРµСЂСЃРёРё СЃ РїРѕРјРѕС‰СЊСЋ grep
         version=$(echo $full_version | grep -oP '(?<=Version: ).*')
-        # Печать выделенной части версии для контроля и отладки
+        # РџРµС‡Р°С‚СЊ РІС‹РґРµР»РµРЅРЅРѕР№ С‡Р°СЃС‚Рё РІРµСЂСЃРёРё РґР»СЏ РєРѕРЅС‚СЂРѕР»СЏ Рё РѕС‚Р»Р°РґРєРё
         echo "Extracted version: $version"
-        # Сохранение выделенной части версии в переменные окружения и выходные данные
+        # РЎРѕС…СЂР°РЅРµРЅРёРµ РІС‹РґРµР»РµРЅРЅРѕР№ С‡Р°СЃС‚Рё РІРµСЂСЃРёРё РІ РїРµСЂРµРјРµРЅРЅС‹Рµ РѕРєСЂСѓР¶РµРЅРёСЏ Рё РІС‹С…РѕРґРЅС‹Рµ РґР°РЅРЅС‹Рµ
         echo "VERSION=$version" >> $GITHUB_ENV
         echo "VERSION=$version" >> $GITHUB_OUTPUT
 
