Изменение способа сохранения версии в release.yml
Обновлен метод сохранения выделенной части версии в переменные окружения. Вместо команды `echo` теперь используется `Add-Content`, что улучшает читаемость и поддержку кода.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,8 +52,8 @@ jobs:
         # Печать выделенной части версии для контроля и отладки
         Write-Output "Extracted version: $version"
         # Сохранение выделенной части версии в переменные окружения и выходные данные
-        echo "VERSION=$version" >> $env:GITHUB_ENV
-        echo "VERSION=$version" >> $env:GITHUB_OUTPUT
+        Add-Content -Path $env:GITHUB_ENV -Value "VERSION=$version"
+        Add-Content -Path $env:GITHUB_OUTPUT -Value "VERSION=$version"
 
 
     - name: Create Release
