--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,9 +52,7 @@ jobs:
         # Печать выделенной части версии для контроля и отладки
         Write-Output "Extracted version: $version"
         # Сохранение выделенной части версии в переменные окружения и выходные данные
-        "$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        "$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
-
+        echo "::set-output name=VERSION::$version"
 
     - name: Create Release
       id: create_release
