Добавлена задача для получения версии приложения
В файле release.yml была добавлена новая задача "Get version",
которая извлекает текущую версию приложения, запуская
исполняемый файл Pinger.exe с параметром -v. Также добавлен
параметр `continue-on-error: true`, что позволяет продолжать
выполнение последующих шагов даже в случае ошибки в этой
задаче. Удалена строка с задачей "Publish".

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
 
     - name: Get version
       id: get_version
+      continue-on-error: true
       shell: pwsh
       run: |
         # Извлечение текущей версии приложения
