Добавлена задача для получения версии приложения
В файле release.yml была добавлена новая задача с именем "Get version". Эта задача выполняет команду для получения полной версии приложения Pinger, используя PowerShell. Она продолжает выполнение даже в случае ошибки и извлекает версию из вывода исполняемого файла Pinger.exe с параметром -v.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
 
     - name: Get version
       id: get_version
+      continue-on-error: true
       shell: pwsh
       run: |
         $full_version = & ./Pinger/bin/Release/publish/win-x64/Pinger.exe -v
