Изменения в получении версии и обработке аргументов
В файле `release.yml` изменен способ получения версии приложения: теперь используется команда оболочки для записи версии в переменную окружения GitHub.

В файле `Pinger.sln` добавлены новые проекты для папок `.github` и `workflows`, что улучшает организацию решения и управление рабочими процессами GitHub Actions.

В файле `Program.cs` изменена логика обработки аргументов командной строки с использованием конструкции `switch`, что делает код более читаемым. Добавлен новый случай для аргумента `vv`, который выводит версию сборки.

В файле `LaunchSettings.json` обновлены аргументы командной строки для профиля `Pinger`, теперь используется `-vv` вместо `-v`, что соответствует изменениям в логике обработки аргументов.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,12 +38,8 @@ jobs:
     - name: Get version
       id: get_version
       continue-on-error: true
-      shell: pwsh
       run: |
-        $full_version = & ./Pinger/bin/Release/publish/win-x64/Pinger.exe -v
-        Write-Output "Full version: $full_version"
-        $version = $full_version.Substring(9).Trim()
-        Write-Output "Extracted version: $version"
+        version=$(./Pinger/bin/Release/publish/win-x64/Pinger.exe -vv)
         echo "VERSION=$version" >> $GITHUB_ENV
 
     - name: Create Release
