Добавлены обновления для управления версиями и пингом
В проекте `Pinger.csproj` добавлен элемент `<Using Include="Pinger" />` для использования пространства имен `Pinger`.
В файле `Program.cs` добавлена переменная `v` для получения текущей версии из класса `Update` и создан объект `Ping` для выполнения операций пинга.
Изменен индекс переменной в методе `ProcessArgsAsync` с `i` на `j` для корректной обработки аргументов командной строки.
Обновлено получение версии программы с использованием атрибута сборки на использование текущей версии из класса `Update`.
В `LaunchSettings.json` удален аргумент `-v` из командной строки.
В классе `Update` добавлены новые поля и методы для работы с версионной информацией, включая регулярное выражение для разбора строк версии и реализацию интерфейсов для сравнения версий.

--- a/Pinger/Pinger.csproj
+++ b/Pinger/Pinger.csproj
@@ -18,4 +18,8 @@
     <EventSourceSupport>false</EventSourceSupport>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Using Include="Pinger" />
+  </ItemGroup>
+
 </Project>
